--- a/src/scripts/index.html
+++ b/src/scripts/index.html
@@ -71,5 +71,97 @@
             </div>
         </form>
     </dialog>
+    <dialog class="todo-delete">
+        <div class="heading">
+            <i class="bx bx-info-square"></i>
+        </div>
+        <div class="description"></div>
+        <div class="buttons-container">
+            <button class="cancel">Cancel</button>
+            <button class="delete" autofocus>Delete</button>
+        </div>
+    </dialog>
+
+    <dialog class="todo-details">
+        <div class="heading">
+            <h3>Task Details</h3>
+            <button class="exit"><i class="bx bx-x"></i></button>
+        </div>
+
+        <div class="content-container">
+            <div class="task-title"></div>
+            <div class="task-description"></div>
+        </div>
+        <div class="properties-container">
+            <div class="project-name">
+                <div class="title">Project</div>
+                <div class="content"></div>
+            </div>
+            <div class="due-date">
+                <div class="title">Due date</div>
+                <div class="content"></div>
+            </div>
+            <div class="priority">
+                <div class="title">Priority</div>
+                <div class="content"></div>
+            </div>
+        </div>
+    </dialog>
+
+        <div class="sidebar">
+            <button class="add-projects add-btn">
+                <i class="bx bx-folder-plus"></i>Add Project
+            </button>
+            <div class="sidebar__title">Projects</div>
+            <div class="projects">
+
+                <template class="projects-template">
+                    <div class="projects__item">
+                        <div class="item__name"></div>
+                        <button class="edit">
+                            <i class="bx bxs-edit"></i>
+                        </button>
+                        <button class="delete">
+                            <i class="bx bx-trash-alt"></i>
+                        </button>
+                    </div>
+                </template>
+            </div>
+        </div>
+
+        <div class="todo-section">
+            <div class="todo-head disabled">
+                <div class="current-project-name"></div>
+                <button class="add-todos add-btn">
+                    <i class="bx bxs-plus-circle"></i>Add Task
+                </button>
+            </div>
+            <div class="todo-container"></div>
+        </div>
+        <template class="todo-template">
+            <div class="todo">
+                <input type="checkbox">
+                <div class="todo-title"></div>
+                <div class="todo-date"></div>
+                <button class="todo-expand">
+                    <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="20px" height="20px">
+                        <path 
+                        d="M 41.9375 8.625 C 41.273438 8.648438 40.664063 9 40.3125 9.5625 L 21.5 38.34375 L 9.3125 27.8125 C 8.789063 27.269531 8.003906 27.066406 7.28125 27.292969 C 6.5625 27.515625 6.027344 28.125 5.902344 28.867188 C 5.777344 29.613281 6.078125 30.363281 6.6875 30.8125 L 20.625 42.875 C 21.0625 43.246094 21.640625 43.410156 22.207031 43.328125 C 22.777344 43.242188 23.28125 42.917969 23.59375 42.4375 L 43.6875 11.75 C 44.117188 11.121094 44.152344 10.308594 43.78125 9.644531 C 43.410156 8.984375 42.695313 8.589844 41.9375 8.625 Z"/>
+                    </svg>
+                </button>
+                <button class="todo-edit">
+                    <i class="bx bxs-edit"></i>
+                </button>
+                <button class="todo-delete">
+                    <i class="bx bx-trash-alt"></i>
+                </button>
+            </div>
+        </template>
+
+        <footer>
+            <a class="link link--github" href="https://github.com/okediarthur" target="_blank" rel="noopener noreferrer">
+                <i class="bx bx1-github"></i>Okedi Arthur
+            </a>
+        </footer>
 </body>
 </html>
